--- a/style.css
+++ b/style.css
@@ -59,3 +59,32 @@
     margin-left: 40px;
 }
 
+.title{
+    /* background-color: #333; */
+    width: 600px;
+    margin-left: 40px;
+    margin-top: 70px;
+}
+
+.title h1{
+    font-size: 50px;
+    font-weight:400;
+}
+
+.title h3{
+    margin-top: 35px;
+}
+
+.title button{
+    margin-top: 60px;
+}
+
+.btn{
+    width: 250px;
+    height: 45px;
+    color: #fff;
+    background-color: #0653B6;
+    outline: none;
+    border: none;
+    font-weight: 800;
+}
